# real-estate-scraper

./: .gitignore  README.md  abbreviations.txt  data_cleaning.py  data_processing.ipynb  database.py  main.py  model_training.ipynb  pyproject.toml  scraper.py  scraper_warmup.py
data/: geocoding_cache.json
