[project]
name = "real-estate-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "contextily>=1.7.0",
    "dotenv>=0.9.9",
    "geopandas>=1.1.3",
    "googlemaps>=4.10.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
